# proyectos-inversion-publica-2026

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.md  ROADMAP.md  SESSION_REPORT.md  _quarto.yml  index.qmd  main.py  pyproject.toml  pyrightconfig.json  sonar-project.properties
.github/workflows/: academic_ci.yml
_site/: search.json
bibliography/: bibliography_index.json  rag_status.json  references.bib
config/: data_catalog.yaml  intelligence_map.json  params.yaml  resources.json  settings.toml
docs/: README.md
docs/management/: ARCHITECTURE.md  SESSION_REPORT.md  index.qmd  root_index_backup.qmd
docs/writing/: A1_Actividad_Contacto.qmd  index.qmd
logs/: health_report.json
scratch/: check_rag_marco_normativo.py  debug_rag_collections.py  stress_test_blindaje.py  sync_rag_marco_normativo.py  test_central_rag.py
scratch/mock_project/: catalog_bad.yaml  catalog_valid.yaml  test_data.csv  test_data.csv.json
scripts/: audit_lab.py  cleanup_guide.py  image_extractor.py  normative_indexer.py  normative_query.py  sync_brain.py
src/core/: __init__.py  brain.py  config.py  lineage.py
src/lib/: audit.py  evaluators.py  formulacion.py  research.py
tests/: conftest.py  test_audit_lab.py  test_brain.py  test_cleanup_guide.py  test_config.py  test_evaluacion.py  test_formulacion.py  test_image_processor.py  test_normative_indexer.py  test_orchestration.py  test_rag_engine.py  test_research.py  test_sync_brain.py  test_vault_architecture.py
writing/: A1_Actividad_Contacto.docx  A1_Actividad_Contacto.qmd  references.bib
(+36 files in other folders)
