[project]
name = "proyectos-inversion-publica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.25.3",
    "faiss-cpu>=1.10.0",
    "pdf2image>=1.17.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "stargazer>=0.0.7",
    "statsmodels>=0.14.6",
    "tabulate>=0.10.0",
    "chromadb>=1.5.8",
    "pytesseract>=0.3.13",
    "pypdf>=6.10.2",
    "capital-workstation-libs",
]

[tool.uv.sources]
capital-workstation-libs = { path = "../../../../../Capital_Workstation/capital-workstation-libs", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
